<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AnswerPhone</string>
    <integer name="com_vk_sdk_AppId" tools:ignore="UnusedResources">5230534</integer>
    <string name="navigation_drawer_open">Открыть "шторку"</string>
    <string name="navigation_drawer_close">Закрыть "шторку"</string>
    <string name="time_unchecked">Время не установлено!</string>
    <string name="hello">Рад приветствовать тебя в этом бесполезном приложении!)</string>
    <string name="mainHeadItem">Главная</string>
    <string name="settingsHeadItem">Настройки</string>
    <string name="extendDrawerItem">Дополнительно</string>
    <string name="showHeadItem">Поделиться</string>
    <string name="messageHeadItem">Отправить сообщение</string>
    <string name="mainFragment">Главная</string>
    <string name="settFrag">Настройки</string>
    <string name="sendFrag">Отправить сообщение</string>
    <string name="msg_now">Мгновенная рассылка</string>
    <string name="switch1Text">Включить рассылку сообщений</string>
    <string name="shareVK_head">Поделиться ВКонтакте</string>
    <string name="edt1_text_hint">Впиши сюда текст сообщения</string>
    <string name="shareButton_text">Поделиться</string>
    <string name="icon_name">Иконка нашего приложения</string>
    <string name="FuncSoon">Функция появится позже. Следите за обновлениями</string>
    <string name="enableMessages">Включить рассылку</string>
    <string name="VK_Err">Произошла ошибка ВК. Попробуйте позже</string>
    <string name="loginSuccess">Успешная авторизация</string>
    <string name="defaultMsg"> $ отправлено с помощью AnswerPhone for VK by DPudov</string>
    <string name="sentMsg">Отправлено</string>
    <string name="checkFrFrag">Выбрать друзей</string>
    <string name="saveButton">Сохранить</string>
    <string name="editText">Введите сообщение</string>
    <string name="serviceStarted">Рассылка включена</string>
    <string name="sendUsMsg">Оставьте свой отзыв или жалобу:)</string>
    <string name="e_mail">dimapudov99@gmail.com</string>
    <string name="user_is_busy">Пользователь занят</string>
    <string name="help_frag_head">Помощь</string>
    <string name="hint_for_time">Сколько минут отправлять</string>
    <string name="answerHead">Автоответчик для ВК</string>
    <string name="try_again_internet">Потеряно соединение. Попробуйте позже</string>
    <string name="group_link">https://vk.com/answerphone_dev</string>
    <string name="hi">Привет </string>
    <string name="head">header</string>
    <string name="title_activity_main">AnswerPhone</string>
    <string name="sendToFriends">Отправить друзьям</string>
    <string name="cancel">Отмена</string>
    <string name="save_and_send">Сохранить и отправить</string>
    <string name="leave_recall">Оставить отзыв</string>
    <string name="text_about_settings_1">Включение рассылки. Этот пункт позволяет включить фоновую рассылку сообщений, типа \"Пользователь занят\"</string>
    <string name="about">Автоответчик Android для ВКонтакте. Приложение создано для пользователей, которые часто находятся в сети, но занимаются другими делами. AnswerPhone за вас отправит сообщение, если вы заняты. Много друзей, а необходимо срочно поздравить всех с наступающим праздником? Теперь это не пролема, так как с помощью нашего приложения Вы можете мгновенно поздравить всех своих друзей:)</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1187220468474207/7262344377</string>
    <string name="banner_ad_unit_id_1" translatable="false">ca-app-pub-1187220468474207/7122743574</string>
    <string name="banner_in_settings" translatable="false">ca-app-pub-1187220468474207/6983142778</string>
    <string name="text_about_friends_1">Выбор друзей - функция, позволяющая приложению понять, кому отправить поздравление или автоответ.</string>
    <string name="about_2">Если Вы столкнулись с ошибкой, чем-то недовольны или хотите предложить изменение - пишите в соответсвующем разделе.</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="online">Online</string>
    <string name="src" translatable="false">src</string>
    <string name="avatar">ava</string>
    <string name="title_activity_settings">Settings</string>
    <string name="commons">Общие</string>
    <string name="friends_unchecked">Друзья не выбраны!</string>
    <string name="my_site">Мой сайт</string>
    <string name="group_in_vk">Группа ВКонтакте</string>
    <string name="my_site_url" translatable="false">http://dpudov.simdif.com/</string>
    <string name="about_heading">О приложении</string>
    <string name="dialogs_head">Диалоги</string>
    <string name="ava_from">Аватар собеседника</string>
    <string name="ok">ОК</string>
    <string name="title_activity_dialogs">DialogsActivity</string>
    <string name="comma">,</string>
    <string name="send" translatable="false">send</string>
    <string name="no_connection">Нет подключения!</string>
    <string name="try_again">Попробовать снова</string>
    <string name="get_started">Начать сейчас!</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="intro_answerphone_head">Быстрый автоответ</string>
    <string name="intro_messaging_head">Отправка сообщений</string>
    <string name="intro_answerphone_desc">Мы ответим вашим собеседникам, даже если вы заняты</string>
    <string name="intro_messaging_desc_text">Мы отправим ваше сообщение любому набору друзей</string>
    <string name="add_prefix">Добавлять приставку</string>
    <string name="add_name">Добавлять обращение</string>
    <string name="decreaces_rapid">Уменьшает скорость работы рассылки</string>
    <string name="change_messaging">Изменение рассылки</string>
    <string name="special">Особые</string>
    <string name="enable_push">Включить push-уведомления</string>
    <string name="about_summary">Версия, номер сборки и т.д.</string>
    <string name="info">О приложении</string>
    <string name="warning">Внимание!</string>
    <string name="in_work">Функция в разработке!</string>
    <string name="azure_unavailable">Сервер временно недоступен. Попробуйте позже.</string>
    <string name="version_description">Версия 1.0\nНомер сборки 123</string>
    <string name="default_post">How to send messages to multiple friends? How to answer when you\'re busy? It\'s easy with AnswerPhone. </string>
    <string name="add_time">Добавлять время</string>
    <string name="add_time_summary">Добавляет оставшееся время рассылки к сообщению</string>
    <string name="rate">Оценить</string>
    <string name="when_user_returns">"Пользователь вернётся через "</string>
    <string name="minutes_end">" минут. "</string>
    <string name="main_page_answer">Автоответчик</string>

</resources>
