<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:clickable="false"
        android:defaultValue="false"
        android:ellipsize="marquee"
        android:icon="@drawable/ic_email_24dp"
        android:key="swSrv"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:title="@string/enableMessages" />
    <EditTextPreference
        android:defaultValue="10"
        android:icon="@drawable/ic_alarm_24dp"
        android:inputType="number"
        android:key="time"
        android:scrollHorizontally="true"
        android:title="@string/hint_for_time" />
    <Preference
        android:icon="@drawable/ic_people_24dp"
        android:key="checkFr"
        android:title="@string/checkFrFrag" />
    <EditTextPreference
        android:key = "defaultMessage"
        android:title="Изменить сообщение"
        android:defaultValue="@string/user_is_busy"
        android:scrollHorizontally="true"
        android:icon="@drawable/ic_create_black_24dp"
        />
    <CheckBoxPreference
        android:defaultValue="false"
        android:ellipsize="marquee"
        android:icon="@drawable/ic_location_history_24dp"
        android:key="addName"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:summary="@string/decreaces_rapid"
        android:title="@string/add_name" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:ellipsize="marquee"
        android:icon="@drawable/ic_chat_24dp"
        android:key="addSpecial"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:summary="@string/defaultMsg"
        android:title="@string/add_prefix" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:ellipsize="marquee"
        android:icon="@drawable/ic_alarm_on_black_24dp"
        android:key="addTime"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:summary="@string/add_time_summary"
        android:title="@string/add_time" />
</PreferenceScreen>