<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dpudov.answerphone.fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/settFrag"
        android:textSize="25sp"
        android:textColor="#000000" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_gravity="center"
        android:id="@+id/settingsLin"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_weight="0.05"
            android:inputType="text"
            android:textSize="20sp"
            android:textColor="#000000"
            android:elegantTextHeight="true"
            android:hint="@string/edt1_text_hint"
            android:focusableInTouchMode="false"
            android:enabled="true"
            android:editable="true" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch1Text"
            android:id="@+id/switch1"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_weight="0.04" />

    </LinearLayout>

</FrameLayout>
