<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dpudov.answerphone.fragments.SendFragment">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="191dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sendUsMsg"
            android:id="@+id/textView2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textAlignment="center"
            tools:ignore="RtlCompat,UnusedAttribute" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendFrag"
            android:id="@+id/sendButton"
            android:background="@color/button_material_light"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:inputType="text"
            android:hint="@string/edt1_text_hint"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>

    </RelativeLayout>

</FrameLayout>
